<resources>
    <string name="app_name">miniproyecto2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">Storege Room</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="signup">REGISTRARSE</string>
    <string name="slogan">TU INVENTARIO EN TUS MANOS</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="agregar_items">Agregar Items</string>
    <string name="nombre_del_item">Nombre del item</string>
    <string name="cantidad">Cantidad</string>
    <string name="_3">3</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="_5000">5000</string>
    <string name="descripci_n">Descripción</string>
    <string name="description_hint">Flor conocida por su belleza y fragancia</string>
    <string name="categor_a">Categoría</string>
    <string name="jardiner_a">Jardinería</string>
    <string name="agregar">Agregar</string>
    <string name="flor_rosa">Flor rosa</string>
    <string name="editar">Editar</string>
    <string name="items">Items</string>
    <string name="listo">Listo</string>
    <string name="borrar">Borrar</string>
    <string name="add_item_button">Add Item button</string>
    <string name="search_item_button">Search item button</string>
    <string name="left_shelf_wall_image">Left shelf wall image</string>
    <string name="right_shelf_wall_image">Right shelf wall image</string>
    <string name="tu_inventario">Tu Inventario</string>
    <string name="right_chain_image">Right chain image</string>
    <string name="left_chain_image">Left chain image</string>
    <string name="top_shelf_image">Top shelf image</string>
    <string name="usuario">Usuario</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="app_logo_image">App logo image</string>
    <string name="banner_image">Banner image</string>
    <string name="busqueda">Búsqueda</string>
    <string name="searchicon">searchIcon</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
    <string name="inserta_el_nombre_a_buscar">Inserta el nombre a buscar</string>
    <string name="filtrar_por_precio">Filtrar por precio</string>
    <string name="desde">Desde</string>
    <string name="_0">0</string>
    <string name="hasta">Hasta</string>
    <string name="filtrar_por_categor_a">Filtrar por categoría</string>
    <string name="filtrar_por_descripci_n">Filtrar por descripción</string>
    <string name="inserta_la_descripci_n">Inserta la descripción</string>
    <string name="inserta_la_descripci_n_a_buscar">Inserta la descripción a buscar</string>
    <string name="buscar">Buscar</string>
    <string name="cancelar">Cancelar</string>
    <string name="_10000000">10000000</string>
    <string name="inserta_el_nombre_de_usuario_a_buscar">Inserta el nombre de usuario a buscar</string>
    <string name="filtrar_por_usuario">Filtrar por usuario</string>
    <string name="jardineria">Jardineria</string>
    <string name="calzado">Calzado</string>
</resources>