<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventoryItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_margin="8dp"
        android:background="@drawable/inventory_item_background"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inventory_item_header"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/searchicon"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_gray" />

            <TextView
                android:id="@+id/searchCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/busqueda"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/searchIcon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/cbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/buscar_por_nombre"
            android:textColor="@color/green"
            android:textSize="13sp"
            android:textStyle="bold"
            android:checked="true"
            android:buttonTint="@color/green"
            app:layout_constraintStart_toEndOf="@id/header"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:layout_marginTop="-5dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/inserta_el_nombre_a_buscar"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/cbName"
            app:layout_constraintTop_toBottomOf="@id/cbName" />

        <CheckBox
            android:id="@+id/cbPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:text="@string/filtrar_por_precio"
            android:textColor="@color/green"
            android:buttonTint="@color/green"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/etName"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <TextView
            android:id="@+id/tvDesde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:paddingTop="15dp"
            android:layout_marginStart="5dp"
            android:text="@string/desde"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/cbPrice"
            app:layout_constraintTop_toBottomOf="@id/cbPrice" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <EditText
            android:id="@+id/etDesde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:autofillHints=""
            android:background="@drawable/edittext_disabled_border"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/leftGuideline"
            app:layout_constraintStart_toEndOf="@id/tvDesde"
            app:layout_constraintTop_toBottomOf="@id/cbPrice" />

        <TextView
            android:id="@+id/tvHasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="15dp"
            android:layout_marginTop="-10dp"
            android:text="@string/hasta"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/cbPrice" />

        <EditText
            android:id="@+id/etHasta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:enabled="false"
            android:background="@drawable/edittext_disabled_border"
            android:inputType="numberDecimal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvHasta"
            app:layout_constraintTop_toBottomOf="@id/cbPrice" />

        <CheckBox
            android:id="@+id/cbCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:text="@string/filtrar_por_categor_a"
            android:textColor="@color/green"
            android:textSize="13sp"
            android:textStyle="bold"
            android:buttonTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHasta" />

        <AutoCompleteTextView
            android:id="@+id/atvCategory"
            style="@style/TextAppearance.AppCompat.Widget.DropDownItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_disabled_border"
            android:enabled="false"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbCategory" />

        <CheckBox
            android:id="@+id/cbUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/filtrar_por_usuario"
            android:textColor="@color/green"
            android:textSize="13sp"
            android:buttonTint="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/atvCategory" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:enabled="false"
            android:background="@drawable/edittext_disabled_border"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbUsername" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/gray"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/ic_search"
            android:drawableTint="@color/dark_gray"
            android:text="@string/buscar"
            app:layout_constraintRight_toRightOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/light_red"
            android:drawableLeft="@drawable/ic_close"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintStart_toEndOf="@id/buttonSearch"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>